[workspace]
members = [
    "programs/universal-nft"
]
resolver = "2"

# Define shared dependencies for the entire workspace here
[workspace.dependencies]
getrandom = { version = "0.2.12", features = ["custom"] }
borsh = "0.10.3" # Add this line

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1